--- a/email.html
+++ b/email.html
@@ -30,8 +30,8 @@
         }
         .border-div{
           border: 5px solid #7eaeff;
-          padding: 20px
-          border-radius: 10px
+          padding: 20px;
+          border-radius: 10px;
         }
         .content {
             padding: 20px;
